# capture

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: use_cases.rs
src/domain/: entities.rs
src/infrastructure/web/: handler.rs
src/infrastructure/web/dto/: user_request.rs
