[package]
name = "face-capture"
version = "0.1.0"
edition = "2021"
authors = ["janezmejias.09@gmail.com"]

[dependencies]
actix-web = {version = "4.4.1", features = ["macros"]}
json = "0.12.4"
serde = { version = "1.0.193" , features = ["derive"]}
uuid = "1.6.1"
validator = "0.16.1"
validator_derive = "0.16.0"
